[gd_scene load_steps=10 format=3 uid="uid://cvachtv0y62o7"]

[ext_resource type="Script" path="res://Systems/Pipe/PipeSystem.gd" id="1_hly0k"]
[ext_resource type="Texture2D" uid="uid://1mdgf5pf2y35" path="res://Shared/Pipes.png" id="2_xrlxt"]
[ext_resource type="Script" path="res://Systems/Pipe/PipePaths.gd" id="3_pos38"]
[ext_resource type="Script" path="res://Systems/Pipe/PipePathFinder.gd" id="4_v71np"]
[ext_resource type="Script" path="res://Systems/Pipe/PipePathPreview.gd" id="5_nlwi1"]
[ext_resource type="Script" path="res://Systems/Pipe/PipeHeatDistributor.gd" id="6_q6y1f"]
[ext_resource type="Script" path="res://Systems/Pipe/PipeHeatNumberVisualizer.gd" id="7_g6s8h"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pjjoo"]
texture = ExtResource("2_xrlxt")
2:0/next_alternative_id = 7
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/left_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/bottom_side = 0
1:2/0/terrains_peering_bit/top_side = 0
0:2/next_alternative_id = 3
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/bottom_side = 0
0:2/0/terrains_peering_bit/top_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/top_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/left_side = 0
2:3/0/terrains_peering_bit/top_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/right_side = 0
2:2/0/terrains_peering_bit/bottom_side = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/left_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/left_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/bottom_side = 0
3:2/0/terrains_peering_bit/left_side = 0
3:2/0/terrains_peering_bit/top_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/terrains_peering_bit/left_side = 0
3:3/0/terrains_peering_bit/top_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/terrains_peering_bit/top_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/right_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/terrains_peering_bit/left_side = 0

[sub_resource type="TileSet" id="TileSet_d62kq"]
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_pjjoo")

[node name="PipeSystem" type="Node2D"]
script = ExtResource("1_hly0k")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_d62kq")
format = 2
layer_0/z_index = -2
script = ExtResource("3_pos38")

[node name="PipePathFinder" type="Node2D" parent="."]
script = ExtResource("4_v71np")

[node name="PipePathPreview" type="Node2D" parent="."]
script = ExtResource("5_nlwi1")

[node name="PipeHeatDistributor" type="Node2D" parent="."]
script = ExtResource("6_q6y1f")

[node name="PipeHeatNumberVisualizer" type="Node2D" parent="PipeHeatDistributor"]
script = ExtResource("7_g6s8h")

[node name="Timer" type="Timer" parent="PipeHeatDistributor/PipeHeatNumberVisualizer"]
